--- a/egress/templates/serviceaccount.yaml
+++ b/egress/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "livekit-recorder.serviceAccountName" . }}
+  name: {{ include "egress.serviceAccountName" . }}
   labels:
-    {{- include "livekit-recorder.labels" . | nindent 4 }}
+    {{- include "egress.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
