Add use_tls to redis config

--- a/server-sample.yaml
+++ b/server-sample.yaml
@@ -22,6 +22,7 @@ livekit:
     # db: 0
     # username:
     # password:
+    # use_tls: true
   # one or more API key/secret pairs
   # see https://docs.livekit.io/guides/getting-started/#generate-api-key-and-secret
   keys:
