--- a/egress-sample.yaml
+++ b/egress-sample.yaml
@@ -26,6 +26,10 @@ egress:
   # gcp:
     # credentials_json:
     # bucket:
+  # cpu_cost:
+    # room_composite_cpu_cost: 3
+    # track_composite_cpu_cost: 2
+    # track_cpu_cost: 1
 
 
 # autoscaling requires resources to be defined
