--- a/egress/templates/hpa.yaml
+++ b/egress/templates/hpa.yaml
@@ -1,5 +1,9 @@
 {{- if .Values.autoscaling.enabled }}
-apiVersion: autoscaling/v2beta2
+{{- if semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion }}
+apiVersion: autoscaling/v2
+{{- else -}}
+apiVersion: autoscaling/v2beta1
+{{- end -}}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "egress.fullname" . }}
