--- a/egress/templates/hpa.yaml
+++ b/egress/templates/hpa.yaml
@@ -1,9 +1,9 @@
 {{- if .Values.autoscaling.enabled }}
 {{- if semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion }}
 apiVersion: autoscaling/v2
-{{- else -}}
+{{- else }}
 apiVersion: autoscaling/v2beta1
-{{- end -}}
+{{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "egress.fullname" . }}
