Kube 1.23 support, other improvements (#36)
* Support for Kube 1.23+. Other changes
* removed kernel settings daemonset
* fixed ingress configuration for DO 1.19+
* added support for external_tls
* added DO example values

* removing daemonset

* simplified Ingress creation

* EKS example

* fixed egress hpa

--- a/examples/server-do.yaml
+++ b/examples/server-do.yaml
@@ -6,21 +6,25 @@ livekit:
   rtc:
     use_external_ip: true
   redis:
-    address: <redis-address>:6379
+    address: <redis-host>:6379
   keys:
-    <key>: <secret>
+    <your-api-key>: <your-secret>
   turn:
     enabled: true
-    domain: <turn-address>
+    domain: <your-turn-domain>
     tls_port: 3478
     secretName: <turn-tls-secret>
 
 loadBalancer:
-  type: gke
+  type: do
+  # TLS certificate generated automatically with certmanager / letsencrypt
+  # secretName is still required. certmanager will place the provisioned
+  # certificate in that secret
+  clusterIssuer: letsencrypt-prod
   tls:
     - hosts:
-        - <server-address>
-      secretName: <server-tls-secret>
+        - <your-primary-domain>
+      secretName: <secret-name>
 
 autoscaling:
   enabled: true
