--- a/examples/server-eks.yaml
+++ b/examples/server-eks.yaml
@@ -6,21 +6,22 @@ livekit:
   rtc:
     use_external_ip: true
   redis:
-    address: <redis-address>:6379
+    address: <redis-host>:6379
   keys:
-    <key>: <secret>
+    <your-api-key>: <your-secret>
   turn:
     enabled: true
-    domain: <turn-address>
+    domain: <your-turn-domain>
     tls_port: 3478
     secretName: <turn-tls-secret>
 
 loadBalancer:
-  type: gke
+  # With ALB, TLS certificates are managed by ACM
+  # Ensure you have issued a certificate for your domain in ACM
+  type: alb
   tls:
     - hosts:
-        - <server-address>
-      secretName: <server-tls-secret>
+        - <your-primary-domain>
 
 autoscaling:
   enabled: true
