--- a/egress/templates/hpa.yaml
+++ b/egress/templates/hpa.yaml
@@ -21,18 +21,38 @@ spec:
     - type: Resource
       resource:
         name: cpu
+        {{- if semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion }}
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
+        {{- else }}
         targetAverageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
+        {{- end }}
     {{- end }}
     {{- if .Values.autoscaling.targetMemoryUtilizationPercentage }}
     - type: Resource
       resource:
         name: memory
+        {{- if semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion }}
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.autoscaling.targetMemoryUtilizationPercentage }}
+        {{- else }}
         targetAverageUtilization: {{ .Values.autoscaling.targetMemoryUtilizationPercentage }}
+        {{- end }}
     {{- end }}
     {{- if .Values.autoscaling.custom }}
     - type: Pods
       pods:
+        {{- if semverCompare ">=1.23-0" .Capabilities.KubeVersion.GitVersion }}
+        metric:
+          name: {{ .Values.autoscaling.custom.metricName }}
+        target:
+          type: AverageValue
+          averageValue: {{ .Values.autoscaling.custom.targetAverageValue }}
+        {{- else }}
         metricName: {{ .Values.autoscaling.custom.metricName }}
         targetAverageValue: {{ .Values.autoscaling.custom.targetAverageValue }}
+        {{- end }}
     {{- end }}
 {{- end }}
