add storage class

--- a/egress/values.yaml
+++ b/egress/values.yaml
@@ -42,3 +42,10 @@ affinity: {}
 
 volumes: {}
 volumeMounts: {}
+storageClass:
+  create: false
+  name: ""
+  provisioner: ""
+  parameters: {}
+  labels: {}
+  annotations: {}
