use wait for consumer

--- a/egress/templates/storageclass.yml
+++ b/egress/templates/storageclass.yml
@@ -12,4 +12,5 @@ provisioner: {{ .Values.storageClass.provisioner }}
 parameters:
   {{- toYaml . | nindent 2}}
 {{- end }}
+volumeBindingMode: WaitForFirstConsumer
 {{- end }}
