--- a/egress/templates/deployment.yaml
+++ b/egress/templates/deployment.yaml
@@ -24,6 +24,7 @@ spec:
       serviceAccountName: {{ include "egress.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
