add new service_type value to server-sample

--- a/server-sample.yaml
+++ b/server-sample.yaml
@@ -44,6 +44,9 @@ livekit:
     # Kubernetes Secret containing TLS cert for <turn.myhost.com>
     # See https://docs.livekit.io/deploy/kubernetes/#importing-ssl-certificates
     secretName: <tlssecret>
+    # set the Kubernetes serviceType for the TURN service. By default it sets it to "LoadBalancer"
+    # See kubernetes serviceTypes on official documentation: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
+    service_type: "LoadBalancer"
 
 loadBalancer:
   # valid values: disable, alb, aws, gke, gke-managed-cert, do
