add imagePullSecrets to values.yaml

--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -8,6 +8,8 @@ image:
   repository: livekit/livekit-server
   pullPolicy: IfNotPresent
 
+imagePullSecrets: []
+
 terminationGracePeriodSeconds: 18000
 
 # configuration for livekit
