feat: no load balancer fallback to cluster ip

--- a/livekit-server/templates/service.yaml
+++ b/livekit-server/templates/service.yaml
@@ -17,6 +17,8 @@ spec:
   type: NodePort
   {{- else if eq .Values.loadBalancer.type "aws" }}
   type: LoadBalancer
+  {{- else }}
+  type: ClusterIP
   {{- end }}
   ports:
     - port: {{ .Values.loadBalancer.servicePort }}
