--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -39,6 +39,7 @@ livekit:
   # webhook: <webhook configuration>
   # room: <default settings for new rooms>
   # region: <set for multi-region deploys>
+  key_file: /keys.yaml
 
 keys:
   {}
