feat: use key file and secrets

--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: {{ include "livekit-server.fullname" . }}-keys
 data:
-  data: |
+  data:
 {{ toYaml .Values.keys | indent 4 }}
