feat: Secret content from values

--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -3,5 +3,4 @@ kind: Secret
 metadata:
   name: {{ include "livekit-server.fullname" . }}-keys
 data:
-  data:
-{{ toYaml .Values.keys | indent 4 }}
+  keys.yaml: {{ toYaml .Values.keys | b64enc }}
