--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -1,6 +1,8 @@
+{{- if .Values.keyFile.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "livekit-server.fullname" . }}-keys
 data:
-  keys.yaml: {{ toYaml .Values.keys | b64enc }}
+  keys.yaml: {{ toYaml .Values.keyFile.keys | b64enc }}
+{{- end }}
